@@ -1,3 +1,7 @@
+2018-05-15  Carl Hetherington  <cth@carlh.net>
+
+	* Fix missing burnt-in / previewed subtitles containing ampersands.
+
 2018-05-08  Carl Hetherington  <cth@carlh.net>
 
 	* Look at subtitle colour and effect when deciding whether or not to
